Fixed printful UI to wrap placements

--- a/src/client/css/printful.css
+++ b/src/client/css/printful.css
@@ -42,13 +42,9 @@ button {
 }
 
 .printful-client-canvas {
-	position: relative;
 	position: absolute;
-	/*width: 100%;
-	height: 100%;*/
-	display: inline-block;
+	display: flex;
 	transform-origin: top left;
-	/*transform-origin: center top;*/
 }
 
 .printful-client-canvas>* {
@@ -298,11 +294,15 @@ button {
 	width: 100%;
 	box-sizing: border-box;
 	flex: 0 0 auto;
+	overflow: auto;
+	flex-wrap: wrap;
+	justify-content: center;
 }
 
 .placements button {
 	display: flex;
 	padding: 0.5rem 2rem;
+	flex: 0 0 auto;
 }
 
 .placements button * {
@@ -370,4 +370,5 @@ harmony-tab.templates {
 	flex-direction: column;
 	gap: 1rem;
 	padding: 1rem;
+	box-sizing: border-box;
 }
